<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="image_description">character\'s photo</string>
    <string name="button_episodes_text">go to the episodes info</string>
    <string name="name_template">Name: %s</string>
    <string name="location_template">Location: %s</string>
    <string name="species_template">Species: %s</string>
    <string name="status_template">Status: %s</string>
    <string name="air_date_template">Air date: %s</string>
    <string name="retry_text">Something went wrong… Retry.</string>
    <string name="retry">Retry</string>
</resources>