<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary60">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_dynamic_primary90"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/character_photo"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_border"
                android:contentDescription="@string/image_description"
                tools:src="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/character_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:paddingHorizontal="4dp"
                android:text="@string/name_template"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/character_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:paddingHorizontal="4dp"
                android:text="@string/location_template"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/character_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:paddingHorizontal="4dp"
                android:text="@string/species_template"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/character_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:paddingHorizontal="4dp"
                android:text="@string/status_template"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/episodes_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/material_dynamic_primary60"
                android:fontFamily="serif"
                android:elevation="6dp"
                android:translationZ="6dp"
                android:stateListAnimator="@null"
                android:text="@string/button_episodes_text"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                app:elevation="10dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>